<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_edit_layout" android:title="@string/edit_layout"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_connect" android:title="@string/connect"
        android:orderInCategory="103" app:showAsAction="always" />
    <item android:id="@+id/action_disconnect" android:title="@string/disconnect"
        android:orderInCategory="104" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_add" android:title="@string/add"
        android:orderInCategory="104" app:showAsAction="ifRoom" />
</menu>
